[package]
name = "weather-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reqwest = {version = "0.13.3", features = ["json", "blocking"]}
serde = { version = "1.0.228", features = ["derive"]}
tokio = {version = "1.52.2", features = ["full"]}
urlencoding = "2.1.3"
